fix: jumping loader

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,5 +6,10 @@ $padding: 1.5rem;
 }
 
 svg-icon {
-  padding: 0.25rem;
+  padding-right: 0.5rem;
+  box-sizing: content-box;
+}
+.loader {
+  height: 1.125rem;
+  width: 1.125rem;
 }
